--- a/views/index.jade
+++ b/views/index.jade
@@ -5,7 +5,7 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(type='text/javascript', src='javascripts/socket.io.min.js')
   body
-    img(src=data)
+    img(src=data, style='width:850px')
 
     input(id='url', type='hidden', value=url)
     input(id='port', type='hidden', value=port)
