--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -19,7 +19,7 @@ a {
   text-shadow: -1px -1px 0 rgba(8, 38, 51, 0.8);
 }
 
-a:active{
+a:hover{
     color: #EBBFA5;
 }
 
@@ -29,7 +29,14 @@ a:active{
     text-align: center;
     text-decoration: none;
     font-size: 36px;
-    padding:60px 0;
+    height: 320px;
+    position: absolute;
+    top: 50%;
+    margin-top: -160px;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #animate img{
@@ -37,9 +44,5 @@ a:active{
     margin: 20px auto 0;
     vertical-align: middle;
     max-width: 100%;
-    width: 50%;
-}
-
-#animate:hover{
-    
+    width: 8em;
 }
